# jm-reusable-scripts

./: .markdownlint.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  AUTHORS.md  CHANGELOG.md  Makefile  README.md  REUSE.toml  SECURITY.md  cspell.config.yaml  mkdocs.yml  package.json  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  gitleaks.toml  labeler.yml  project-config.yml  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml
.github/actions/python-setup/: action.yml
.github/config/: dependency-review-config.yml  gitleaks.toml  issue-triage.json  labeler.yml  labels.yml  release-changelog-config.json  release-drafter.yml  scorecard-policy.yml
.github/workflows/: changelog.yml  ci.yml  codeql-analysis.yml  commitlint.yml  dependabot-merge.yml  docs-deploy.yml  issue-managment.yml  labeler.yml  labels-sync.yml  maintenance.yml  pr-automation.yml  pr-checks.yml  scorecard.yml
docs/: api-reference.md  contact.md  index.md  license.md  troubleshooting.md
docs/.overrides/partials/: copyright.html
docs/about/: index.md
docs/community/: contributing.md
docs/developer/: api.md  architecture.md  build.md  development.md  security.md
docs/developer-guide/: index.md
docs/getting-started/: index.md
docs/user-guide/: user-guide.md
src/jm_reusable_scripts/: __about__.py  __init__.py  doc_quality.py  doc_quality.toml  translation_status.py
src/jm_reusable_scripts/utils/: doc_config.py
tests/unit/: test_doc_quality.py  test_translation_status.py
